service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: my-app
    version: blue # This can be switched to 'green' for directing traffic to the green deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
